Updated no output.

--- a/noout.ipynb
+++ b/noout.ipynb
@@ -535,15 +535,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1 = 'clear_population.pickle'\n",
-    "of1 = open(f1,'wb')\n",
-    "pickle.dump(people,of1)\n",
-    "of1.close()\n",
+    "#f1 = 'clear_population.pickle'\n",
+    "#of1 = open(f1,'wb')\n",
+    "#pickle.dump(people,of1)\n",
+    "#of1.close()\n",
     "\n",
-    "f2 = 'infected_population.pickle'\n",
-    "of2 = open(f2,'wb')\n",
-    "pickle.dump(infected,of2)\n",
-    "of2.close()"
+    "#f2 = 'infected_population.pickle'\n",
+    "#of2 = open(f2,'wb')\n",
+    "#pickle.dump(infected,of2)\n",
+    "#of2.close()"
    ]
   }
  ],
